# accelerando-core

./: .flake8  LICENSE  README.md  pyproject.toml
src/accelerando_core/: __init__.py
src/accelerando_core/models/: __init__.py  article.py  genre.py  links.py  person.py  track.py
