[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "accelerando-core"
version = "1.0.0"
authors = [
    {name = "gumerov-amir", email = "gumerov.amir.e@gmail.com"}
]
description = "Accelerando core"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.11"
dependencies = [
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "flake8-black",
    "flake8-bandit",
    "flake8-commas",
    "flake8-eradicate",
    "flake8-import-order",
    "flake8-quotes"
]

[project.urls]
homepage = "https://github.com/gumerov-amir/accelerando-core"

[tool.setuptools.package-data]
"accelerando_core" = ["py.typed"]
